--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<h1>TEST 2</h1>
+<div class="container">
+    <div class="container--header">
+        <h1>Conway's</h1>
+        <h2>Game of Life</h2>
+    </div>
+    
+    <div class="container--grid">
+        <gol-grid></gol-grid>
+    </div>
+</div>
