--- a/src/app/components/gol-grid/gol-grid.component.html
+++ b/src/app/components/gol-grid/gol-grid.component.html
@@ -1,6 +1,6 @@
 <div>
-    <gol-cell></gol-cell>
-    <gol-cell></gol-cell>
+    <gol-cell state="alive"></gol-cell>
+    <gol-cell state="death"></gol-cell>
     <gol-cell></gol-cell>
     <gol-cell></gol-cell>
     <gol-cell></gol-cell>
