--- a/src/assets.scss
+++ b/src/assets.scss
@@ -1,5 +1,5 @@
-$primary: #162F3F;
-$secondary: #226071;
+$dark-blue: #162F3F;
+$blue: #226071;
 $light: #C7D7D1;
 $green: #78A63D;
 $dark-green: #47682D;
