--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@ body {
     height: 100%;
     position: absolute;
     width: 100%;
-    background-color: $black;
+    background-color: $dark-blue;
 }
 
 h1, h2 {
