--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <div class="container">
     <div class="container--header">
-        <h1>Conway's</h1>
-        <h2>Game of Life</h2>
+        <gol-header></gol-header>
     </div>
-    
+
     <div class="container--grid">
         <gol-grid></gol-grid>
     </div>
