--- a/src/app/components/gol-cell/gol-cell.component.scss
+++ b/src/app/components/gol-cell/gol-cell.component.scss
@@ -1,6 +1,7 @@
 @import '../../../assets.scss';
 
 div{
+    border-radius: 3px;
     padding-top: 100%;
     background-color: $light;
     box-shadow: inset 0 0 5px $dark-blue;
