Set and manage game-running state

--- a/src/app/components/gol-cell/gol-cell.component.html
+++ b/src/app/components/gol-cell/gol-cell.component.html
@@ -1,1 +1,1 @@
-<div [ngClass]="cell.isAlive ? 'alive' : 'death'" (click)="setCellState()"></div>
+<div [ngClass]="cell.isAlive ? 'alive' : 'death'" [class.disabled]="isGameRunning()" (click)="setCellState()"></div>
