--- a/src/app/components/gol-grid/gol-grid.component.html
+++ b/src/app/components/gol-grid/gol-grid.component.html
@@ -1,3 +1,3 @@
-<div>
+<div [ngStyle]="setStyleGrid()">
     <gol-cell *ngFor="let cell of cells; let i = index"  state="death" [cell]="cell"></gol-cell>
-</div>
+</div> 
