--- a/src/app/components/gol-header/gol-header.component.html
+++ b/src/app/components/gol-header/gol-header.component.html
@@ -7,7 +7,7 @@
     <!-- PULSANTI -->
     <div class="header--action">
         <!-- Reset -->
-        <gol-button (click)="resetGame()">
+        <gol-button (click)="resetGame()" [disabled]="settingsService.getIsGameRunning()">
             <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 512 512">
                 <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <path
@@ -47,7 +47,7 @@
         <ng-template #counter>
             <!-- Counter -->
             <gol-button [disabled]="true">
-                <label><b>{{settingsService.getIterations() - iterations}}</b></label>
+                <label><b>{{iterations}}</b></label>
             </gol-button>
         </ng-template>
     </div>
