--- a/src/assets.scss
+++ b/src/assets.scss
@@ -3,4 +3,8 @@ $blue: #226071;
 $light: #C7D7D1;
 $green: #78A63D;
 $dark-green: #47682D;
-$black: #1c1c1c
+$black: #1c1c1c;
+
+:root{
+    --dark-blue: #162F3F;
+}
