--- a/src/app/components/gol-cell/gol-cell.component.scss
+++ b/src/app/components/gol-cell/gol-cell.component.scss
@@ -3,7 +3,7 @@
 div{
     padding-top: 100%;
     background-color: $light;
-    box-shadow: inset 0 0 5px $dark-blue;
+    // box-shadow: inset 0 0 5px $dark-blue;
     &.alive{
         background-color: $green;
     }
