New test deploy

--- a/src/app/components/gol-pattern/gol-pattern.component.html
+++ b/src/app/components/gol-pattern/gol-pattern.component.html
@@ -21,7 +21,7 @@
                 <h3>Heart pattern</h3>
 
                 <!-- Img -->
-                <img src="../../../assets/img/heart-pattern.png" alt="heart-pattern" (click)="openPattern('heart')">
+                <img src="../../../assets/heart-pattern.png" alt="heart-pattern" (click)="openPattern('heart')">
             </div>
 
             <!-- Cat -->
@@ -30,7 +30,7 @@
                 <h3>Cat pattern</h3>
 
                 <!-- Img -->
-                <img src="../../../assets/img/cat-pattern.png" alt="cat-pattern" (click)="openPattern('cat')">
+                <img src="../../../assets/cat-pattern.png" alt="cat-pattern" (click)="openPattern('cat')">
             </div>
             
             <!-- Tree -->
@@ -39,7 +39,7 @@
                 <h3>Tree pattern</h3>
 
                 <!-- Img -->
-                <img src="../../../assets/img/tree-pattern.png" alt="tree-pattern" (click)="openPattern('tree')">
+                <img src="../../../assets/tree-pattern.png" alt="tree-pattern" (click)="openPattern('tree')">
             </div>
         </div>
     </ng-container>
